--- a/homecss.css
+++ b/homecss.css
@@ -69,7 +69,7 @@ h1{
 	font-size: 240%;
 	word-spacing: 5px;
 	letter-spacing: 3px;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 	text-transform: uppercase;
 	font-family: 'Flamenco', cursive;
 }
@@ -108,6 +108,16 @@ h1{
 }
 .animation{
 	animation: colorchange 1s infinite;
+}
+.esentials{
+	position: absolute;
+	margin-top: 380px;
+	margin-left: 15%;
+}
+.esentials li{
+	font-style: normal;
+	font-weight: bolder;
+	margin: 30px;
 }
 
 @keyframes colorchange{
