profile page started

--- a/fitness/templates/base.html
+++ b/fitness/templates/base.html
@@ -46,9 +46,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" 
 <div class="main-content">
 <h1>WELCOME TO <span class="animation">THE MONTEIL FITNESS</span> <br>
 bla bla bla</h1>
-<a href="{% url 'users:login' %}" class="btn btn-half">LOGIN</a>
+<a href="login" class="btn btn-half">LOGIN</a>
 
-<a href="{% url 'users:register' %}" class="btn btn-half">REGISTER</a>
+<a href="register" class="btn btn-half">REGISTER</a>
 
 </div>
 </header>
