--- a/fitness/hackyjm/templates/profile.html
+++ b/fitness/hackyjm/templates/profile.html
@@ -1,3 +1,6 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
@@ -14,17 +17,14 @@
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
 	integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
-<script src="{% static 'master.js' %}"></script>
-<link rel="stylesheet" href="{% static 'master.css' %}" />
-
+<!------ Include the above in your HEAD tag ---------->
 <style>
-	body {
-		background-image: url('/static/images/backimage.jpg');
-		background-repeat: no-repeat;
-		background-size: cover;
-	}
 
-	h1,
+
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+h1,
 	h2,
 	h3,
 	h4,
@@ -43,10 +43,50 @@
 	.fa-coffee {
 		font-size: 200px;
 	}
+body
+{
+    font-family: 'Open Sans', sans-serif;
+    background-color:white;
+}
+
+.fb-profile img.fb-image-lg{
+    z-index: 0;
+    width: 100%;
+    height:75%;
+    margin-bottom: 10px;
+}
+
+.fb-image-profile
+{
+    margin: -90px 10px 0px 50px;
+    z-index: 9;
+    width: 20%;
+}
+
+@media (max-width:768px)
+{
+
+.fb-profile-text>h1{
+    font-weight: 700;
+    font-size:16px;
+}
+
+.fb-image-profile
+{
+    margin: -45px 10px 0px 25px;
+    z-index: 9;
+    width: 20%;
+}
+
+}
+
+.cards{
+ margin-left: 150px;
+}
 </style>
 
 <body>
-	<div class="w3-top">
+<div class="w3-top">
 		<div class="w3-bar w3-purple w3-card w3-left-align w3-large">
 			<a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-purple"
 				href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i
@@ -91,78 +131,28 @@
 	</div>
 
 
-	<header class="w3-container w3-center w3-margin-top" style=" padding: 128px 16px;">
-		<div class="d-flex justify-content-center h-100">
-			<div class="user_card">
-				<div class="d-flex justify-content-center">
+
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<div class="container">
+    <div class="fb-profile">
+        <img align="left" class="fb-image-lg" src="blue.png" alt="Profile image example"/>
+        <img align="left" class="fb-image-profile thumbnail" src="htt   p://lorempixel.com/180/180/people/9/" alt="Profile image example"/>
+        <div class="fb-profile-text">
+            <h1>{{username}}</h1>
+            <p>My Bio</p>
+        </div>
+    </div>
+</div> <!-- /container -->
 
 
-					<h3 id="form-title">LOGIN</h3>
-				</div>
-				<div class="d-flex justify-content-center form_container">
-					<form method="POST" action="{% url 'users:login' %}">
-						{% csrf_token %}
-						<div class="input-group mb-3">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
-							</div>
-
-							<input type="text" name="username" placeholder="Username..." class="form-control">
-						</div>
-
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
-
-							<input type="password" name="password" placeholder="Password..." class="form-control">
-						</div>
-
-						<div class="d-flex justify-content-center mt-3 login_container">
-							<input class="btn login_btn btn-half" type="submit" value="Login">
-						</div>
-					</form>
-
-				</div>
-
-				{% for message in messages %}
-				<p id="messages">{{message}}</p>
-				{% endfor %}
-
-				<div class="mt-4">
-					<div class="d-flex justify-content-center links">
-						Don't have an account? <a href="{% url 'users:register' %}" class="ml-2">Sign Up</a>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</header>
+<div class="card" style="width: 40%;margin-left:150px;margin-top:100px" >
+            <div class="card-body">
+                <h5 class="card-title">Set Age,Height,Weight and Gender</h5>
+                <p class="card-text" placeholder="Age" name="age">To set your Dimensions </p>
+                <a href="#" class="btn btn-primary">Click here</a>
+            </div>
+</div>
 
 
-	<script>
-		// Used to toggle the menu on small screens when clicking on the menu button
-		function myFunction() {
-			var x = document.getElementById("navDemo");
-			if (x.className.indexOf("w3-show") == -1) {
-				x.className += " w3-show";
-			} else {
-				x.className = x.className.replace(" w3-show", "");
-			}
-		}
-	</script>
 
-	<script>
-		// Used to toggle the menu on small screens when clicking on the menu button
-		function myFunction() {
-			var x = document.getElementById("navDemo");
-			if (x.className.indexOf("w3-show") == -1) {
-				x.className += " w3-show";
-			} else {
-				x.className = x.className.replace(" w3-show", "");
-			}
-		}
-	</script>
 </body>
-
-</html>
